--- a/Sources/Sundew.Xaml.Optimizations.nuspec
+++ b/Sources/Sundew.Xaml.Optimizations.nuspec
@@ -2,21 +2,20 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>Sundew.Xaml.Optimizations</id>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <authors>Kim Hugener-Ohlsen</authors>
     <owners>Kim Hugener-Ohlsen</owners>
+    <developmentDependency>true</developmentDependency>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://github.com/hugener/Sundew.Xaml.Optimizations</projectUrl>
-    <description>Xaml Optimizations for ResourceDictionary.</description>
+    <description>Various Xaml optimizations.
+- ResourceDictionaryCachingOptimizer
+- FreezeResourceOptimizer</description>
     <summary>Xaml Optimizations</summary>
-    <releaseNotes>1.0.0 - Caching of merged ResourceDictionaries.</releaseNotes>
+    <releaseNotes>2.0.0 - Added optimizer for freezing Freezables per default.
+1.0.0 - Caching of merged ResourceDictionaries.</releaseNotes>
     <copyright>Hukano</copyright>
     <language>en-US</language>
-    <dependencies>
-      <dependency id="Sundew.Base" version="3.3.8" exclude="all"/>
-      <dependency id="Sundew.Xaml.Optimization" version="1.0.0" exclude="all"/>
-      <dependency id="Newtonsoft.Json" version="12.0.1" exclude="all"/>
-    </dependencies>
   </metadata>
   <files>
     <file src="Sundew.Xaml.Wpf\bin\Release\Sundew.Xaml.Wpf.dll" target="lib\net40\Sundew.Xaml.Wpf.dll" />
