--- a/Sources/Sundew.Xaml.Optimizations/Sundew.Xaml.Optimizations.csproj
+++ b/Sources/Sundew.Xaml.Optimizations/Sundew.Xaml.Optimizations.csproj
@@ -35,6 +35,7 @@
     <DocumentationFile>bin\Release\Sundew.Xaml.Optimizations.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,8 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Freezing\FreezeResourceOptimizer.DefaultFreezables.cs" />
+    <Compile Include="Freezing\Internal\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Freezing\FreezeResourceOptimizer.cs" />
     <Compile Include="ResourceDictionary\Internal\Constants.cs" />
+    <Compile Include="Freezing\FreezeResourceSettings.cs" />
     <Compile Include="ResourceDictionary\Internal\OptimizationInfo.cs" />
     <Compile Include="ResourceDictionary\Internal\OptimizationMode.cs" />
     <Compile Include="ResourceDictionary\Internal\OptimizationProvider.cs" />
@@ -62,7 +67,7 @@
       <Version>3.3.8</Version>
     </PackageReference>
     <PackageReference Include="Sundew.Xaml.Optimization">
-      <Version>1.0.0</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
