--- a/Sources/Sundew.Xaml.UnitTests/Sundew.Xaml.UnitTests.csproj
+++ b/Sources/Sundew.Xaml.UnitTests/Sundew.Xaml.UnitTests.csproj
@@ -59,6 +59,9 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Optimizations\Constants.cs" />
+    <Compile Include="Optimizations\Freezing\FreezeResourceOptimizerTests.cs" />
+    <Compile Include="Optimizations\Freezing\FreezeResourceSettingsTests.cs" />
     <Compile Include="ResourceDictionaryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Optimizations\ResourceDictionary\ResourceDictionaryCachingOptimizerTests.cs" />
@@ -81,9 +84,6 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions">
       <Version>5.6.0</Version>
-    </PackageReference>
-    <PackageReference Include="JetBrains.dotMemoryUnit">
-      <Version>3.0.20171219.105559</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.Platforms">
       <Version>2.2.0</Version>
@@ -109,7 +109,7 @@
       <Version>3.3.8</Version>
     </PackageReference>
     <PackageReference Include="Sundew.Xaml.Optimization">
-      <Version>1.0.0</Version>
+      <Version>2.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.AppContext">
       <Version>4.3.0</Version>
